--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </canvas>
 
     <script>
-    	alert("test1")
-    	alert("test2")
-    	alert("test3")
-    	alert("test4")
-    	alert("test5")
-    	alert("test6")
+        alert("蓝晓萤..")
+        alert("其实有句话一直想和你说..")
+        alert("我..")
+        alert("emmmm..")
+        alert("我...")
+        alert("我cnm.")
     digit =
     [
         [
