--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         alert("我..")
         alert("emmmm..")
         alert("我...")
-        alert("我cnm.")
+        alert("......")
+        alert("我cnm")
     digit =
     [
         [
