--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@ var WINDOW_HEIGHT = 768;
 var RADIUS = 8;
 var MARGIN_TOP = 60;
 var MARGIN_LEFT = 30;
-
+alert("莹崽崽要准备学习了嘛!!!")
 var settingtime=k()
 
 function k(){
-    var x=prompt("请设置时间(分钟)"," ");
+    var x=prompt("宝贝设置一下时间(分钟)♥(๑> ₃ <)♥","");
     if(x>5999||x<0)
     {
-        alert("请输入正确的分钟数(0-5998)并刷新");
+        alert("只能输0-5998哦,刷新一哈!");
     }
     else{
     return  x;}
