--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ var WINDOW_HEIGHT = 768;
 var RADIUS = 8;
 var MARGIN_TOP = 60;
 var MARGIN_LEFT = 30;
-alert("莹崽崽要准备学习了嘛!!!")
+alert("萤崽崽要准备学习了嘛!!!")
 var settingtime=k()
 
 function k(){
